der sandbox ein hübscheres layout verpasst und ein paar seiten hinzugefügt

--- a/src/main/java/name/felixbecker/sandbox/springdata/web/pages/LandingPage.html
+++ b/src/main/java/name/felixbecker/sandbox/springdata/web/pages/LandingPage.html
@@ -1,14 +1,5 @@
 <?xml version="1.0" encoding="UTF-8" ?>
-<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
-<html xmlns="http://www.w3.org/1999/xhtml"
-	xmlns:wicket="http://wicket.apache.org/dtds.data/wicket-xhtml1.4-strict.dtd"
-	xml:lang="de" lang="de">
-<head>
-<meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
-<title>Landing Page, Welcome</title>
-</head>
-<body>
-	<h1>Landing-Page</h1>
+<wicket:extend>
 	<p>Herzlich Willkommen!</p>
 	<ul>
 		<li wicket:id="list"><span wicket:id="text">Text</span></li>
@@ -16,5 +7,4 @@
 	<div wicket:id="firstName"></div>
 	<div wicket:id="lastName"></div>
 	<div wicket:id="age"></div>
-</body>
-</html>
+</wicket:extend>
