--- a/src/main/java/name/felixbecker/sandbox/springdata/web/pages/LandingPage.html
+++ b/src/main/java/name/felixbecker/sandbox/springdata/web/pages/LandingPage.html
@@ -2,9 +2,11 @@
 <wicket:extend>
 	<p>Herzlich Willkommen!</p>
 	<ul>
-		<li wicket:id="list"><span wicket:id="text">Text</span></li>
+		<li wicket:id="list">
+			<span wicket:id="firstName">Text</span>
+			<span wicket:id="lastName">Text</span>
+			<span wicket:id="age">Text</span>
+		</li>
 	</ul>
-	<div wicket:id="firstName"></div>
-	<div wicket:id="lastName"></div>
-	<div wicket:id="age"></div>
+
 </wicket:extend>
