--- a/src/main/java/name/felixbecker/sandbox/springdata/web/MainTemplate.html
+++ b/src/main/java/name/felixbecker/sandbox/springdata/web/MainTemplate.html
@@ -14,6 +14,7 @@
 	</ul>
 	<div id="content">
 		<h2 wicket:id="pageTitle" />
+		<div id="feedbackPanel" wicket:id="feedbackPanel" />
 		<wicket:child>Content here</wicket:child>
 	</div>
 </body>
