--- a/src/main/java/name/felixbecker/sandbox/springdata/web/pages/AddUserPage.html
+++ b/src/main/java/name/felixbecker/sandbox/springdata/web/pages/AddUserPage.html
@@ -4,6 +4,14 @@
 	<form wicket:id="addUserForm">
 		<table>
 			<tr>
+				<td>Username (required):</td>
+				<td><input type="text" wicket:id="username" /></td>
+			</tr>
+			<tr>
+				<td>Password (required):</td>
+				<td><input type="password" wicket:id="password" /></td>
+			</tr>
+			<tr>
 				<td>Vorname:</td>
 				<td><input type="text" wicket:id="firstName" /></td>
 			</tr>
