--- a/src/main/java/name/felixbecker/sandbox/springdata/web/pages/LandingPage.html
+++ b/src/main/java/name/felixbecker/sandbox/springdata/web/pages/LandingPage.html
@@ -3,9 +3,7 @@
 	<p>Herzlich Willkommen!</p>
 	<ul>
 		<li wicket:id="list">
-			<span wicket:id="firstName">Text</span>
-			<span wicket:id="lastName">Text</span>
-			<span wicket:id="age">Text</span>
+			<span wicket:id="username">Text</span>
 		</li>
 	</ul>
 
