--- a/src/main/java/name/felixbecker/sandbox/springdata/web/MainTemplate.html
+++ b/src/main/java/name/felixbecker/sandbox/springdata/web/MainTemplate.html
@@ -11,6 +11,7 @@
 	<ul id="menu">
 		<li><a href="#" wicket:id="userOverviewLink">Userliste</a></li>
 		<li><a href="#" wicket:id="addUserLink">User hinzufügen</a></li>
+		<li><a href="#" wicket:id="loginLink">Login</a></li>
 	</ul>
 	<div id="content">
 		<h2 wicket:id="pageTitle" />
