Fehler bei Anlegen von Benutzer / Login anzeigen.

--- a/src/main/java/name/felixbecker/sandbox/springdata/web/pages/AddUserPage.html
+++ b/src/main/java/name/felixbecker/sandbox/springdata/web/pages/AddUserPage.html
@@ -27,5 +27,8 @@
 				<td colspan="2"><input type="submit" value="save user" /></td>
 			</tr>
 		</table>
+		<p>
+			<span wicket:id="statusLabel"></span>
+		</p>
 	</form>
 </wicket:extend>
