--- a/src/main/java/name/felixbecker/sandbox/springdata/web/pages/LoginPage.html
+++ b/src/main/java/name/felixbecker/sandbox/springdata/web/pages/LoginPage.html
@@ -14,5 +14,8 @@
 				<td colspan="2"><input type="submit" value="login" /></td>
 			</tr>
 		</table>
+		<p>
+			<span wicket:id="statusLabel"></span>
+		</p>
 	</form>
 </wicket:extend>
